--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,9 @@ test_script:
 on_failure:
   - travis-tool.sh dump_logs
 
+on_success:
+  - Rscript -e "options(covr.gcov = 'C:/Rtools/mingw_64/bin/gcov.exe');covr::codecov()"
+
 artifacts:
   - path: '*.Rcheck\**\*.log'
     name: Logs
