--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: showimage
 Title: Show an Image on an 'R' Graphics Device
 Version: 1.0.0
-Author: Gábor Csárdi
-Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
+Authors@R: 
+    person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre"))
 Description: Sometimes it is handy to be able to view an image file on an
     'R' graphics device. This package just does that. Currently it supports
     'PNG' files.
