usethis::use_roxygen_md()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,6 @@ Imports:
 Suggests:
     covr,
     testthat
-RoxygenNote: 5.0.1
+RoxygenNote: 7.2.3
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
