--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Sometimes it is handy to be able to view an image file on an
     'PNG' files.
 License: GPL-2 | GPL-3
 LazyData: true
-URL: https://github.com/r-lib/showimage#readme
+URL: https://github.com/r-lib/showimage#readme, https://r-lib.github.io/showimage/
 BugReports: https://github.com/r-lib/showimage/issues
 Imports:
     png,
@@ -19,3 +19,4 @@ Suggests:
 RoxygenNote: 7.2.3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
+Config/Needs/website: tidyverse/tidytemplate
