--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,9 @@ Imports:
     tools
 Suggests:
     covr,
-    testthat
+    testthat (>= 3.0.0)
 RoxygenNote: 7.2.3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 Config/Needs/website: tidyverse/tidytemplate
+Config/testthat/edition: 3
