--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: showimage
 Title: Show an Image on an 'R' Graphics Device
 Version: 1.0.0
-Authors@R: 
-    person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre"))
+Authors@R: c(
+    person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre")),
+    person("Posit Software, PBC", role = c("cph", "fnd"))
+    )
 Description: Sometimes it is handy to be able to view an image file on an
     'R' graphics device. This package just does that. Currently it supports
     'PNG' files.
