--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,24 +4,25 @@ Version: 1.0.0
 Authors@R: c(
     person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre")),
     person("Posit Software, PBC", role = c("cph", "fnd"))
-    )
+  )
 Description: Sometimes it is handy to be able to view an image file on an
-    'R' graphics device. This package just does that. Currently it supports
-    'PNG' files.
+    'R' graphics device. This package just does that. Currently it
+    supports 'PNG' files.
 License: GPL-2 | GPL-3
-LazyData: true
-URL: https://github.com/r-lib/showimage#readme, https://r-lib.github.io/showimage/
+URL: https://github.com/r-lib/showimage#readme,
+    https://r-lib.github.io/showimage/
 BugReports: https://github.com/r-lib/showimage/issues
+Depends: 
+    R (>= 3.6)
 Imports:
     png,
     tools
 Suggests:
     covr,
     testthat (>= 3.0.0)
-RoxygenNote: 7.2.3
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
 Config/Needs/website: tidyverse/tidytemplate
 Config/testthat/edition: 3
-Depends: 
-    R (>= 3.6)
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
